# Wiedza

./: README.md  main.py  pyproject.toml  requirements.txt
#_ZAKLADANIE_PROJ/: workflow.ipynb
BIBLIOTEKI/: wiedza_bibl.ipynb
GIT/: komendy.ipynb  workflow.ipynb
KODY/: bar.ipynb
KURS_ED_DONER/: baza_wiedzy.ipynb  git_fork_ED.ipynb
POWERSHELL/: komendy.ipynb
UV/: 1_Start.ipynb  komendy.ipynb  problemy.ipynb  workflow_UV.ipynb
WORKFLOW_PROJ/: workflow.ipynb
