[project]
name = "wiedza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gitpython>=3.1.49",
    "ipykernel>=7.2.0",
    "openai>=2.33.0",
    "requests>=2.33.1",
    "scraper>=0.1.0",
    "tqdm>=4.67.3",
    "uv>=0.11.8",
]
